balancetracker-dsqa-kubernetes/kubernetes_explorer.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      author: Interticket
      product: BalanceTracker
      version: uat
    creationTimestamp: null
    labels:
      balancetracker: explorer
    name: explorer
  spec:
    type: NodePort 
    ports:
    - name: "8090"
      port: 8090
      targetPort: 8080
      nodePort: 31080
    selector:
      balancetracker: explorer
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    annotations:
      author: Interticket
      product: BalanceTracker
      version: uat
    creationTimestamp: null
    labels:
      balancetracker: explorer
    name: explorer
  spec:
    serviceName: explorer
    replicas: 1
    selector:
      matchLabels:
        balancetracker: explorer
    template:
      metadata:
        creationTimestamp: null
        labels:
          balancetracker: explorer
      spec:
        containers:
        - args:
          - sh
          - -c
          - sleep 16&& node /opt/explorer/main.js && tail -f /dev/null
          image: danielszego/explorer:latest
          name: explorer
          ports:
          - containerPort: 8080
          resources: {}
          volumeMounts:
          - mountPath: /opt/explorer/app/platform/fabric/
            name: explorer-claim0
            subPath: ./balancetracker-dsqa-kubernetes/app/platform/fabric/
            readOnly: true
          - mountPath: /opt/explorer/app/platform/fabric/connection-profile
            name: explorer-claim0
            subPath: ./balancetracker-dsqa-kubernetes/app/platform/fabric/connection-profile/
            readOnly: true
          - mountPath: /tmp/crypto
            name: explorer-claim0
            subPath: ./balancetracker-dsqa-kubernetes/crypto-config/
            readOnly: true
          - mountPath: /opt/explorer/ssl-certs/
            name: explorer-claim0
            subPath: ./balancetracker-dsqa-kubernetes/explorer_ssl_certs/
            readOnly: true
          - mountPath: /opt/wallet
            name: walletstore-volume-claim
        hostname: explorer
        restartPolicy: Always
        volumes:
        - name: explorer-claim0
          persistentVolumeClaim:
            claimName: fabrichome-claim
            readOnly: true
#        - name: explorer-claim1
#          persistentVolumeClaim:
#            claimName: fabrichome-claim
#        - name: explorer-claim2
#          persistentVolumeClaim:
#            claimName: fabrichome-claim
        - name: walletstore-volume-claim
          persistentVolumeClaim:
            claimName: walletstore-claim
  status:
    replicas: 1
kind: List
metadata: {}
